--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.8"
+    "autoprefixer": "^10.4.8",
+    "nuxt": "3.0.0-rc.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "@vitejs/plugin-vue": "^3.0.3"
   }
 }
