--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-
     "@nuxt/postcss8": "^1.1.3",
-
     "autoprefixer": "^10.4.8",
     "nuxt": "3.0.0-rc.8",
     "postcss": "^8.4.16",
@@ -17,7 +15,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@vitejs/plugin-vue": "^3.0.3"
-
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vuelidate/core": "^2.0.0-alpha.44",
+    "@vuelidate/validators": "^2.0.0-alpha.31",
+    "vuelidate": "^0.7.7"
   }
 }
